--- a/carbone/database-static-spring-boot/build.gradle
+++ b/carbone/database-static-spring-boot/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation project(':carbone-ide')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
