--- a/carbone/database-static-spring-boot/build.gradle
+++ b/carbone/database-static-spring-boot/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.apache.poi:poi-ooxml:5.2.5'
 
 }
 
