--- a/carbone/database-static-spring-boot/build.gradle
+++ b/carbone/database-static-spring-boot/build.gradle
@@ -28,6 +28,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.apache.poi:poi-ooxml:5.2.5'
+	// Apache POI
+	implementation 'commons-io:commons-io:2.15.1'
+	implementation 'org.apache.poi:poi-ooxml'
+
+
+	implementation 'org.apache.poi:poi:5.2.5'
 
 }
 
